Fix elements overlap on mobile

--- a/src/Components/Projects/Projectdetail.css
+++ b/src/Components/Projects/Projectdetail.css
@@ -68,7 +68,6 @@
     right: 0;
     display: flex;
     cursor: pointer;
-    transition: 0.3s;
 }
 
 .detailFooter:hover {
